# ai_learning_2025

./: .gitignore
.hypothesis/constants/: 11cb48d3882b5edc
day_02/: README.md  pyproject.toml
day_02/.hypothesis/constants/: 03679605ca6e7acd  0664ff8b15350d38  405005ac51fdcbab  49bf77a6d722dd78  75927ff2b57e082e  917c1479f5ee91f0  97ab257099ff4acd  ce6621dc8378ce46  de861255a7da238f  e81d1004e1c896c5
day_02/.hypothesis/examples/04e6b3400353b141/: 2b57464fe8a5007f  92311a0a3bdb6f30  e35c28fd3b2ab28a
day_02/.hypothesis/examples/2b57464fe8a5007f/: 0678a8376024a727  0f92fa83d4ee3e52  135e51eb4a768874  198b9886059b2c69  1a9b2da749057219  1cd0309a3d89184f  23b47705af443333  24f50fe493e16c7a  2ac7f3a66260c976  31048d5f69c9374c  31f10251232cacef  3459b18bca6d143a  348fc2ac2a2b3011  373f151469706c9f  3812f90a9d7fa66a  387f16f8b30099a0  38d3acbd988771bc  3c7ae9ae8872103f  3e37e13cfb3fd73b  41a3ab8f9d24c10e  47b04400d69d2eb6  567970e3b2b7575e  6e1e9b37eff56839  7718f964a26c2db9  77497f18a98707fe  7b9ce7b6ab644a91  7e1daee81b0008ae  8226e17eb86e88c2  8474701b39e4e108  865b03bab1e9a1c5  887dc01a7acc8b47  894fec239f3207a3  8da7644555bf55d2  8f12c551c11ee38c  95b15b4ea8b3fa23  9671241bb8e23ad1  98528fb783cc4a47  9c5b19af8970f930  a88420a11f5e97aa  a98f22ff621bf6d2  (+25 more)
day_02/.hypothesis/examples/92311a0a3bdb6f30/: 0029bd69f9101524  012e8e3702d04fc1  02ded30f29af7bd3  03310b6edc3718dc  0c0efc764d7e140f  0c593b3b15cacbc0  0ce2e01ca5167118  142a9e919838a69e  14b55fb7eacde1b6  17c03a6d7677a126  18af8c1525980cf5  1ddf50287a5142b8  2145f1d2b3788f17  23b9a2837b08cf52  2a5c0c7f93ca6fea  2af9d7dc47ad3250  2c3ac00fc462f8f7  2d2023001bd5f46d  2d28a16ec777fd51  2ddff2ccf9ac0675  359232b087167361  421a219dc0e2dd5c  4612103deebdeb40  48e4c07c0fca0b7f  4ee43c730c289383  4fa759d2ca206736  51cc404d7caec0f0  545e30292699dade  584e22a66f7f0ad2  594931b982145383  626b2f98d995cbda  6339cc4fb3da3b32  64b4601aada9d718  66297c1d74f6512b  699cff31e0ed0aba  6cb54003bbe224ad  6d78c027be712692  6ece5416bc3b19ad  70e4f6f3225efd10  71687d42bf982420  (+46 more)
day_02/.hypothesis/examples/e35c28fd3b2ab28a/: 2dfd300e69cdedb2
day_02/src/data_checker/: __init__.py  data_checker.py
day_02/src/data_checker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
day_02/tests/: easy_test.py  test_data_checker.py
day_08/: pyproject.toml
day_08/tests/: test_transforms.py
day_09/: messy_customer_data.csv  pyproject.toml
day_09/tests/: test_preporcessor.py
day_10/: customers.csv  pyproject.toml  transactions.csv
day_10/src/data_analysis/: __init__.py  analysis.py
day_10/tests/: test_analysis.py
day_11/: pyproject.toml
day_11/tests/: test_validators.py
day_12/: pyproject.toml  sample_data.csv
day_12/src/optimizer/: __init__.py  fast_processor.py  slow_processor.py
day_12/tests/: test_performance.py
day_13/: pyproject.toml
day_13/src/visualizer/: visualizer.py
day_13/tests/: test_visualizer.py
day_14/: README.md  pyproject.toml  transactions_with_issues.csv
day_14/src/dashboard/: dashboard.py
day_14/src/visualizer/: __init__.py  visualizer.py
day_15/: pyproject.toml
day_15/data/: sales_data.csv
day_15/src/viz_stats/: __init__.py  visualizer.py
day_15/tests/: test_visualizer.py
day_16/: README.md  create_realistic_data.py  pyproject.toml
day_16/data/: sales_data.csv
day_16/src/eda_toolkit/: __init__.py  analyzer.py
day_16/tests/: test_analyser.py
day_17/: README.md  generate_sample_data.py  test_save.py
day_17/data/: customer_segments.csv  product_pricing.csv
day_17/notebooks/: scenario_2_classification.ipynb  (+1 more)
day_18/: energy_data_notes.txt
day_19/: data_clean_renewables.csv  data_country_metrics.csv  data_storage_candidates.csv  data_time_series.csv  initial_findings.md
(+14 files in other folders)
