[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
version = "0.1.0"I 
name = "data_checker"
dependencies = [
    "numpy >= 1.21.0",
    "pandas > 1.3.0"
]
requires-python = ">= 3.8"
authors = [
    {name = "Dave Bean", email = "bean2778@gmail.com"}
]
maintainers = [
    {name = "Dave Bean"}
]
description = "data checker"
readme = "README.md"

license = "GPL-3.0-or-later"