[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data_analysis"
version = "0.1.0"
dependencies = [
    "numpy >= 1.21.0",
    "Pillow >= 9.0.0",  # For loading test images
]
requires-python = ">= 3.8"

[project.optional-dependencies]
dev = [
    "pytest >= 7.0.0",
    "pytest-benchmark >= 4.0.0",
]