[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visualizer"
version = "0.1.0"
dependencies = [
    "numpy >= 1.21.0",
    "pandas >= 1.3.0",
    "matplotlib >= 3.9.1",
]
requires-python = ">= 3.8"

[project.optional-dependencies]
dev = [
    "pytest >= 7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/optimizer"]