[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dashboard"
version = "0.1.0"
dependencies = [
    "streamlit >= 1.28.0",
    "pandas >= 1.3.0",
    "numpy >= 1.21.0",
    "matplotlib >= 3.5.0",
]
requires-python = ">= 3.8"

[project.optional-dependencies]
dev = ["pytest >= 7.0.0"]