[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "viz_stats"
version = "0.1.0"
description = "Statistical visualization toolkit for ML data exploration"
dependencies = [
    "pandas >= 1.3.0",
    "matplotlib >= 3.5.0",
    "seaborn >= 0.12.0",
    "numpy >= 1.21.0"
]
requires-python = ">= 3.8"

[project.optional-dependencies]
dev = [
    "pytest >= 7.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/viz_stats"]