[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eda_toolkit"
version = "0.1.0"
description = "Automated exploratory data analysis toolkit"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas >= 1.3.0",
    "numpy >= 1.21.0",
    "matplotlib >= 3.4.0",
    "seaborn >= 0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/eda_toolkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]